hello-ingress/hello-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: web
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: web2
  name: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: web2
  name: web2
spec:
  type: NodePort
  selector:
    app: web2
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
